# phy

./: .gitignore  CMakeLists.txt  README.md
include/: gl_visualizer.hpp  particle.hpp  simulation.hpp  vector3d.hpp
src/: gl_visualizer.cpp  main.cpp  particle.cpp  simulation.cpp
tests/: CMakeLists.txt  test_main.cpp
